--- a/course/3_clustering.qmd
+++ b/course/3_clustering.qmd
@@ -4,6 +4,8 @@ format:
   html:
     code-link: true
 engine: knitr
+execute:
+  warning: false
 ---
 
 # Distances
@@ -31,17 +33,16 @@ Euclidean distance, also known as the L2 distance, is the most common metric use
 
 ## `dist` in R
 
-```R
+```{r}
 # Load the iris dataset
 data(iris)
-iris_numeric <- iris[, 1:4]  # Exclude the species column
+iris_numeric <- iris[, 1:4] # Exclude the species column
 
 # Euclidean distance
 euclidean_distances <- dist(iris_numeric, method = "euclidean")
 
 # Manhattan distance
 manhattan_distances <- dist(iris_numeric, method = "manhattan")
-
 ```
 
 
@@ -57,7 +58,7 @@ K-means has some limitations, such as sensitivity to the initial random selectio
 
 Running on K-means on the iris data set:
 
-```R
+```{r}
 # Load data
 data(iris)
 iris_data <- iris[, -5]
@@ -74,11 +75,9 @@ table(Cluster = kmeans_result$cluster, Species = iris$Species)
 library(ggplot2)
 ggplot(iris, aes(Sepal.Length, Sepal.Width, color = factor(kmeans_result$cluster))) +
   geom_point(alpha = 0.5) +
-  labs(color = 'Cluster') +
+  labs(color = "Cluster") +
   ggtitle("K-means Clustering of the Iris Dataset")
-
 ```
-![Kmeans on iris data](kmeans.png)
 
 
 ## Heirarchical Clustering
@@ -89,7 +88,7 @@ The result of hierarchical clustering is often visualized using a dendrogram, wh
 
 Lets use hclust on a set of TCR sequences, where the distance between each sequence is defined as the edit distance. We can plot a dendrogram highlighting sequence similarity.
 
-```R
+```{r}
 # Install and load necessary packages
 if (!requireNamespace("stringdist", quietly = TRUE)) {
   install.packages("stringdist")
@@ -98,7 +97,7 @@ library(stringdist)
 
 # Define TCR sequences
 tcr_sequences <- c("CASSLGTQYEQYF", "CASSLGTEAFF", "CASSQETQYEQYF", "CASSLRTDTQYF")
-names(tcr_sequences) <- tcr_sequences  # Use sequences as labels
+names(tcr_sequences) <- tcr_sequences # Use sequences as labels
 
 # Calculate pairwise string distances using the Levenshtein method
 dist_matrix <- stringdistmatrix(tcr_sequences, tcr_sequences, method = "lv")
@@ -107,18 +106,21 @@ dist_matrix <- stringdistmatrix(tcr_sequences, tcr_sequences, method = "lv")
 hc <- hclust(as.dist(dist_matrix), method = "complete")
 
 # Plot the dendrogram
-plot(hc, main = "Hierarchical Clustering of TCR Sequences", sub = "", xlab = "", ylab = "Distance",
-     labels = names(tcr_sequences), hang = -1)  # Ensure labels hang below the plot
+plot(hc,
+  main = "Hierarchical Clustering of TCR Sequences", sub = "", xlab = "", ylab = "Distance",
+  labels = names(tcr_sequences), hang = -1
+) # Ensure labels hang below the plot
 ```
-![Sequence Distance Clustering](tcr_string_dist.png)
 
 We can create a more complex simulated dataset of simulated single cell gene expression data. In this case, we have two cell types, and expect that the resulting dendrogram produced from the clustering should show clear differences between these cell types. Finally, we can plot the expression values in heatmap to visualize the difference between the genes across cells. The ordering of the rows is dictated by the dendrogram, drawing more similar cells closer together, allowing us to see the expression patterns that define each cell type.
 
 
-```R
+```{r}
+#| fig-width: 6
+#| fig-height: 6
 # Install and load pheatmap if not already installed
 if (!requireNamespace("pheatmap", quietly = TRUE)) {
-    install.packages("pheatmap")
+  install.packages("pheatmap")
 }
 library(pheatmap)
 
@@ -127,15 +129,16 @@ set.seed(42)
 
 # Define parameters
 num_genes <- 100
-num_samples <- 50  # 25 T cells + 25 Cancer cells
+num_samples <- 50 # 25 T cells + 25 Cancer cells
 
 # Simulate base gene expression
-gene_expression <- matrix(rnorm(num_genes * num_samples, mean = 10, sd = 2), 
-                          nrow = num_genes, ncol = num_samples)
+gene_expression <- matrix(rnorm(num_genes * num_samples, mean = 10, sd = 2),
+  nrow = num_genes, ncol = num_samples
+)
 
 # Introduce differences in expression between the two groups
-gene_expression[81:100, 1:25] <- gene_expression[81:100, 1:25] + 2  # T cells
-gene_expression[81:100, 26:50] <- gene_expression[81:100, 26:50] - 2  # Cancer cells
+gene_expression[81:100, 1:25] <- gene_expression[81:100, 1:25] + 2 # T cells
+gene_expression[81:100, 26:50] <- gene_expression[81:100, 26:50] - 2 # Cancer cells
 
 # Label rows and columns
 rownames(gene_expression) <- paste("Gene", 1:num_genes, sep = "")
@@ -145,17 +148,15 @@ colnames(gene_expression) <- c(paste("T_Cell", 1:25, sep = ""), paste("Cancer_Ce
 transposed_gene_expression <- t(gene_expression)
 
 # Creating a heatmap with clustering and annotation
-pheatmap(transposed_gene_expression, 
-         show_rownames = TRUE, 
-         show_colnames = FALSE, 
-         clustering_distance_rows = "euclidean",
-         cluster_rows  = TRUE,
-         cluster_cols  = FALSE,
-         main = "Heatmap of Gene Expression with Clustering")
-
+pheatmap(transposed_gene_expression,
+  show_rownames = FALSE,
+  show_colnames = FALSE,
+  clustering_distance_rows = "euclidean",
+  cluster_rows = TRUE,
+  cluster_cols = FALSE,
+  main = "Heatmap of Gene Expression with Clustering"
+)
 ```
-![Expression Distance Clustering](gene_expression_dist.png)
-![Expression Distance Clustering](gene_expression_heatmap.png)
 
 # Dimensionality Reduction
 
@@ -165,7 +166,7 @@ Dimension reduction is a crucial step in analyzing high-dimensional data, such a
 
 PCA is a widely used dimension reduction technique that transforms high-dimensional data into a lower-dimensional representation by identifying the principal components that capture the maximum variance in the data. These principal components are orthogonal to each other and can be used to visualize the data in lower dimensions.
 
-```R
+```{r}
 # Load necessary packages
 library(ggplot2)
 
@@ -176,19 +177,22 @@ iris_data <- iris[, 1:4]
 # PCA
 pca_results <- prcomp(iris_data, center = TRUE, scale. = TRUE)
 print(summary(pca_results))
-
-
-# Scatter plot of the first two PCs
-pc_df <- data.frame(PC1 = pca_results$x[,1], PC2 = pca_results$x[,2], Species = iris$Species)
-ggplot(pc_df, aes(x = PC1, y = PC2, color = Species)) +
-    geom_point() +
-    labs(title = "PCA of Iris Dataset",
-         x = "Principal Component 1",
-         y = "Principal Component 2") +
-    theme_minimal()
 ```
 
-![PCA example](pca_iris.png)
+
+```{r}
+# Scatter plot of the first two PCs
+pc_df <- data.frame(PC1 = pca_results$x[, 1], PC2 = pca_results$x[, 2], Species = iris$Species)
+ggplot(pc_df, aes(x = PC1, y = PC2, color = Species)) +
+  geom_point() +
+  labs(
+    title = "PCA of Iris Dataset",
+    x = "Principal Component 1",
+    y = "Principal Component 2"
+  ) +
+  theme_minimal()
+```
+
 
 ## t-SNE
 
@@ -196,14 +200,14 @@ ggplot(pc_df, aes(x = PC1, y = PC2, color = Species)) +
 t-SNE (t-Distributed Stochastic Neighbor Embedding) is a dimensionality reduction technique commonly used in bioinformatics to visualize high-dimensional data, such as gene expression profiles or single-cell RNA sequencing (scRNA-seq) data, in a lower-dimensional space. t-SNE aims to preserve local structure and clusterings in the data by modeling similarities between data points in the high-dimensional space and embedding them into a lower-dimensional space. In t-SNE, similarities between data points are represented by conditional probabilities that two points are similar given their high-dimensional representations. t-SNE iteratively adjusts the positions of data points in the lower-dimensional space to minimize the difference between the conditional probabilities of pairwise similarities in the high-dimensional and low-dimensional spaces.
 
 
-```R
+```{r}
 # Load the Rtsne package
 library(Rtsne)
 
 unique_iris <- unique(iris[, 1:4])
 
 # Run t-SNE on the deduplicated data
-set.seed(42)  # for reproducibility
+set.seed(42) # for reproducibility
 tsne_results <- Rtsne(unique_iris, dims = 2, perplexity = 30, verbose = TRUE)
 
 # Create a data frame for plotting (assuming you want to include species labels)
@@ -219,22 +223,22 @@ tsne_data$Species <- species_data
 library(ggplot2)
 ggplot(tsne_data, aes(x = X1, y = X2, color = Species)) +
   geom_point(alpha = 0.8) +
-  labs(title = "Iris dataset t-SNE plot",
-       x = "t-SNE 1", y = "t-SNE 2") +
+  labs(
+    title = "Iris dataset t-SNE plot",
+    x = "t-SNE 1", y = "t-SNE 2"
+  ) +
   theme_minimal()
-
 ```
-![t-SNE example](tsne_iris.png)
 
 ## UMAP
 
 UMAP (Uniform Manifold Approximation and Projection) is a modern technique for dimensionality reduction that is particularly useful for visualizing clusters or groups in high-dimensional data. Similar to t-SNE, UMAP focuses on preserving the local structure of the data but also tries to retain more of the global structure compared to t-SNE. UMAP is based on manifold learning and operates under the assumption that the data is uniformly distributed on a locally connected Riemannian manifold.
 
 
-```R
+```{r}
 # Install and load umap if not already installed
 if (!requireNamespace("umap", quietly = TRUE)) {
-    install.packages("umap")
+  install.packages("umap")
 }
 
 library(umap)
@@ -244,20 +248,21 @@ library(ggplot2)
 data(iris)
 
 # Run UMAP
-set.seed(42)  # for reproducibility
+set.seed(42) # for reproducibility
 umap_results <- umap(iris[, 1:4])
 
 # Create a data frame for plotting
 iris_umap <- data.frame(umap_results$layout)
-iris_umap$Species = iris$Species
+iris_umap$Species <- iris$Species
 
 ggplot(iris_umap, aes(x = X1, y = X2, color = Species)) +
   geom_point(alpha = 0.8) +
-  labs(title = "Iris Dataset UMAP Plot",
-       x = "UMAP 1", y = "UMAP 2") +
+  labs(
+    title = "Iris Dataset UMAP Plot",
+    x = "UMAP 1", y = "UMAP 2"
+  ) +
   theme_minimal()
 ```
-![UMAP example](umap_iris.png)
 
 # Correlation
 
@@ -267,11 +272,11 @@ Correlation measures the strength and direction of the relationship between two 
 
 - **Pearson Correlation**: Measures the linear relationship between two variables. It assumes that the variables are normally distributed and have a linear relationship.
 
-```R
+```{r}
 # Generate example data
 set.seed(42)
-x <- rnorm(100)  # Generate 100 random numbers from a standard normal distribution
-y <- x + rnorm(100, mean = 0, sd = 0.5)  # Create y as a noisy version of x
+x <- rnorm(100) # Generate 100 random numbers from a standard normal distribution
+y <- x + rnorm(100, mean = 0, sd = 0.5) # Create y as a noisy version of x
 
 # Calculate Pearson correlation coefficient
 pearson_correlation <- cor(x, y, method = "pearson")
@@ -281,43 +286,46 @@ print(paste("Pearson correlation coefficient:", round(pearson_correlation, 2)))
 
 - **Spearman Correlation**: Measures the monotonic relationship between two variables. It does not assume linearity and is more robust to outliers and non-normal distributions.
 
-```R
+```{r}
 # Generate example data
 set.seed(42)
-x <- rnorm(100)  # Generate 100 random numbers from a standard normal distribution
-y <- x + rnorm(100, mean = 0, sd = 0.5)  # Create y as a noisy version of x
+x <- rnorm(100) # Generate 100 random numbers from a standard normal distribution
+y <- x + rnorm(100, mean = 0, sd = 0.5) # Create y as a noisy version of x
 
 # Calculate Spearman correlation coefficient
 spearman_correlation <- cor(x, y, method = "spearman")
 print(paste("Spearman correlation coefficient:", round(spearman_correlation, 2)))
 ```
 
-## `geom_smooth`
+## `geom_smooth()`
 
 Simple example using iris.
-```R
+
+```{r}
 library(ggplot2)
 
 # Create a scatter plot with a smoothed line
 ggplot(data = iris, aes(x = Sepal.Length, y = Sepal.Width, color = Species)) +
-  geom_point() +  # Add scatter points
-  geom_smooth(method = "lm", se = FALSE) +  # Add linear regression line
+  geom_point() + # Add scatter points
+  geom_smooth(method = "lm", se = FALSE) + # Add linear regression line
   labs(title = "Scatter Plot with Smoothed Line", x = "Sepal Length", y = "Sepal Width")
 ```
-![geom_smooth iris](geom_smooth_iris.png)
 
 Simulate data points from two groups and use geom_smooth with a different model for each group.
-```R
+
+```{r}
 # Load required libraries
 library(ggplot2)
 
 # Generate example data
 set.seed(42)
-n <- 100  # Number of data points per group
-x <- 1:n  # x values
-group <- rep(c("linear", "sinusoidal"), each = n)  # Group labels
-y <- c(0.5 * x + rnorm(n, mean = 0, sd = 5),  # Group 'linear' with a linear trend
-       2 * sin(seq(0, 2 * pi, length.out = n)) + rnorm(n, mean = 0, sd = 0.5))  # Group 'sinusoidal' with a sinusoidal trend
+n <- 100 # Number of data points per group
+x <- 1:n # x values
+group <- rep(c("linear", "sinusoidal"), each = n) # Group labels
+y <- c(
+  0.5 * x + rnorm(n, mean = 0, sd = 5), # Group 'linear' with a linear trend
+  2 * sin(seq(0, 2 * pi, length.out = n)) + rnorm(n, mean = 0, sd = 0.5)
+) # Group 'sinusoidal' with a sinusoidal trend
 
 # Standardize y-values within each group
 y <- ave(y, group, FUN = scale)
@@ -327,39 +335,39 @@ df <- data.frame(x = rep(x, 2), y = y, group = rep(group, 2))
 
 # Plot the data with smoothed lines and confidence intervals for each group
 ggplot(data = df, aes(x = x, y = y, color = group)) +
-  geom_point() +  # Add scatter points
-  geom_smooth(data = subset(df, group == "linear"), method = "lm", se = TRUE) +  # Add linear smoothed line with confidence intervals
-  geom_smooth(data = subset(df, group == "sinusoidal"), method = "loess", se = TRUE) +  # Add sinusoidal smoothed line with confidence intervals
+  geom_point() + # Add scatter points
+  geom_smooth(data = subset(df, group == "linear"), method = "lm", se = TRUE) + # Add linear smoothed line with confidence intervals
+  geom_smooth(data = subset(df, group == "sinusoidal"), method = "loess", se = TRUE) + # Add sinusoidal smoothed line with confidence intervals
   labs(title = "Scatter Plot with Smoothed Lines and Confidence Intervals by Group", x = "X", y = "Y (Standardized)") +
   theme_minimal()
 ```
-![geom_smooth Simulated](geom_smooth_simulated.png)
 
 ## Linear Regression
 
 Statistical model to estimate the linear relationship between a dependent variable and a set of independent variables. The goal is find the best fit line by fitting the observed data to a linear equation.
 
-```R
-
+```{r}
 # Generate example data with more noise
 set.seed(42)
-df <- data.frame(x = 1:100,                    # Independent variable
-                 y = 2 * df$x + rnorm(100, mean = 0, sd = 30))    # Dependent variable with more noise
+df <- data.frame(
+  x = 1:100, # Independent variable
+  y = 2 * df$x + rnorm(100, mean = 0, sd = 30)
+) # Dependent variable with more noise
 
 model <- lm(y ~ x, data = df)
 
 # Visualize the data and fitted line
 ggplot(df, aes(x = x, y = y)) +
-  geom_point() +                              # Add scatter points
-  geom_smooth(method = "lm", se = FALSE) +    # Add fitted line
+  geom_point() + # Add scatter points
+  geom_smooth(method = "lm", se = FALSE) + # Add fitted line
   labs(title = "Linear Regression Example", x = "x", y = "y")
 ```
-![Linear regression example](lm_example.png)
 
 
 ## Example Code
 
-```R
+```{r}
+#| warning: false
 # Load required libraries
 library(ggpubr)
 
@@ -408,15 +416,14 @@ ggscatter(df, x = "Gene1", y = "Gene2",
 # Save the pheatmap object to a variable, can you find which genes correspond to which clusters (use "$" to access object data)
 # what cluster does Gene 5 correspond to
 # CODE YOUR ANSWER HERE
-
-
 ```
 
 # Bonus Exercises: Heatmaps using ggplot2
 
-```R
+```{r}
 library(ggdendro)
 library(ggplot2)
+library(tidyr)
 library(tibble)
 
 # Manually perform hierarchical clustering to generate heatmap using ggplot2
@@ -465,7 +472,7 @@ ggplot(reorder_plot, aes(x = Gene, y = Cell, fill = expression_value)) +
   geom_tile() +
   scale_fill_viridis_c(option = 'rocket') +
   coord_cartesian(expand = TRUE) + # removes blank space towards the edge
-  labs(fill = )
+  labs(fill = "Expression") +
   theme_bw() +
   theme(axis.text = element_blank(),
         axis.ticks = element_blank())
