slide links inpage

--- a/course/1_introR.qmd
+++ b/course/1_introR.qmd
@@ -3,6 +3,9 @@ title: "Introduction to R"
 format:
   html:
     code-link: true
+    other-links:
+      - text: Lecture Slides
+        href: https://github.com/Cancer-Research-Institute/CRI_bioinformatics_workshop/blob/eeacedb409bb9a9766e9c99a348c5fbc3a0074ed/course/slides/CRI%20Bioinformatics%20Bootcamp%202025%20Day%201AM.pdf
 engine: knitr
 ---
 
